risc0/zirgen/dsl/test/repro/missing_specialization_arg.zir
// RUN: not zirgen --emit=zhlt %s 2>&1 | FileCheck %s
// CHECK: error: expected a value for type parameter #1

component Foo<n: Val, t: Type>() {}

component Bar() {
  Foo<0>();
}


